fix Bug #71642. Fixed the issue where the filter component triggered by the 'Filter' action on the chart in maxMode scrolls along with the vs-pane-container scrollbar.

--- a/web/projects/portal/src/app/composer/gui/vs/editor/viewsheet-pane.component.scss
+++ b/web/projects/portal/src/app/composer/gui/vs/editor/viewsheet-pane.component.scss
@@ -150,6 +150,11 @@ div.vs-pane .bl-selected {
   z-index: 1000;
 }
 
+.max-mode-view-filter {
+  position: fixed;
+  z-index: 9910 !important;
+}
+
 .javascript-icon {
   cursor: pointer;
 }
